Stop default form submission behaviour minor bug on mobile phone

--- a/src/components/Movie/Artwork/MovieArtwork.css
+++ b/src/components/Movie/Artwork/MovieArtwork.css
@@ -17,7 +17,7 @@
     .movie-artwork {
         width: 50vw;
         height: calc(100vh - 64px);
-        background-position: 0 50%;
+        background-position: 0 50%
     }
 }
 
@@ -32,7 +32,7 @@
     background: #000;
     opacity: 0.8;
     filter: blur(40px);
-    z-index: 0;
+    z-index: 0
 }
 
 .movie-artwork .__title {
@@ -41,7 +41,5 @@
     position: relative;
     padding: 1vh 5vw;
     text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.9) 0px 0px 10px
-
-    
+    text-shadow: rgba(0, 0, 0, 0.9) 0px 0px 10px    
 }
