--- a/src/components/Movie/Details/MovieDetails.css
+++ b/src/components/Movie/Details/MovieDetails.css
@@ -5,5 +5,5 @@
 }
 
 .movie-details .__copy {
-    margin: 2em 0;
+    margin: 2em 0
 }
